--- a/VisualizerUI/MainWindow.xaml
+++ b/VisualizerUI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VisualizerUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Icon="/Assets/NV_darkgray_near_black_background_24x24.png">
     <Grid>
 
     </Grid>
