--- a/VisualizerUI/App.xaml
+++ b/VisualizerUI/App.xaml
@@ -4,6 +4,9 @@
              xmlns:local="clr-namespace:VisualizerUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="{x:Type Window}">
+            <Setter Property="FontFamily" Value="Consolas"/>
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
     </Application.Resources>
 </Application>
