--- a/VisualizerUI/MainWindow.xaml
+++ b/VisualizerUI/MainWindow.xaml
@@ -3,10 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:p="clr-namespace:VisualizerUI.Properties"
         xmlns:local="clr-namespace:VisualizerUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Icon="/Assets/NV_darkgray_near_black_background_24x24.png">
+        Title="{x:Static p:Resources.MAIN_WINDOW_TITLE}" Height="450" Width="800" Icon="/Assets/NV_darkgray_near_black_background_24x24.png" SizeToContent="WidthAndHeight" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="10"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label Content="{x:Static p:Resources.MW_SERVER_LABEL}" Grid.Row="0" Grid.Column="0" Margin="5,0,0,0"/>
+        <TextBox x:Name="ServerTextBox" Grid.Row="0" Grid.Column="1" Width="100" VerticalAlignment="Center" Margin="0,0,5,0"/>
+        <Label Content="{x:Static p:Resources.MW_DATABASE_LABEL}" Grid.Row="1" Grid.Column="0" Margin="5,0,0,0"/>
+        <TextBox x:Name="DatabaseTextBox" Grid.Row="1" Grid.Column="1" Width="100" VerticalAlignment="Center" Margin="0,0,5,0"/>
     </Grid>
 </Window>
