--- a/VisualizerUI/MainWindow.xaml
+++ b/VisualizerUI/MainWindow.xaml
@@ -11,6 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -18,8 +19,9 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label Content="{x:Static p:Resources.MW_SERVER_LABEL}" Grid.Row="0" Grid.Column="0" Margin="5,0,0,0"/>
-        <TextBox x:Name="ServerTextBox" Grid.Row="0" Grid.Column="1" Width="100" VerticalAlignment="Center" Margin="0,0,5,0"/>
+        <TextBox x:Name="ServerTextBox" Grid.Row="0" Grid.Column="1" Width="200" VerticalAlignment="Center" Margin="0,0,5,0"/>
         <Label Content="{x:Static p:Resources.MW_DATABASE_LABEL}" Grid.Row="1" Grid.Column="0" Margin="5,0,0,0"/>
-        <TextBox x:Name="DatabaseTextBox" Grid.Row="1" Grid.Column="1" Width="100" VerticalAlignment="Center" Margin="0,0,5,0"/>
+        <TextBox x:Name="DatabaseTextBox" Grid.Row="1" Grid.Column="1" Width="200" VerticalAlignment="Center" Margin="0,0,5,0"/>
+        <Button x:Name="ConnectButton" Grid.Row="2" Grid.Column="1" Content="Connect" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="3" Click="ConnectButton_Click" Margin="0,0,5,0"/>
     </Grid>
 </Window>
