--- a/VisualizerUI/MainWindow.xaml
+++ b/VisualizerUI/MainWindow.xaml
@@ -21,16 +21,26 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label Content="{x:Static p:Resources.MW_SERVER_LABEL}" Grid.Row="0" Grid.Column="0" Margin="5,0,0,0"/>
-        <TextBox x:Name="ServerTextBox" Grid.Row="0" Grid.Column="1" Width="200" VerticalAlignment="Center" Margin="0,0,5,0"/>
-        <Label Content="{x:Static p:Resources.MW_DATABASE_LABEL}" Grid.Row="1" Grid.Column="0" Margin="5,0,0,0"/>
-        <TextBox x:Name="DatabaseTextBox" Grid.Row="1" Grid.Column="1" Width="200" VerticalAlignment="Center" Margin="0,0,5,0"/>
-        <Label Content="{x:Static p:Resources.MW_DATABASE_LABEL}" Grid.Row="2" Grid.Column="0" Margin="5,0,0,0"/>
-        <TextBox x:Name="CompanyTextBox" Grid.Row="2" Grid.Column="1" Width="200" VerticalAlignment="Center" Margin="0,0,5,0"/>
-        <Button x:Name="UpdateCostAmountChartButton" Grid.Row="3" Grid.Column="1" Content="Update Chart" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="3" Click="UpdateCostAmountChartButton_Click" Margin="0,0,5,0"/>
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="5,0,5,0">
+            <Label Content="{x:Static p:Resources.MW_SERVER_LABEL}" VerticalAlignment="Center"/>
+            <TextBox x:Name="ServerTextBox" Width="200" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <Label Content="{x:Static p:Resources.MW_DATABASE_LABEL}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <TextBox x:Name="DatabaseTextBox" Width="200" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <Label Content="{x:Static p:Resources.MW_COMPANY_LABEL}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <TextBox x:Name="CompanyTextBox" Width="200" VerticalAlignment="Center" Margin="5,0,0,0"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="5,0,5,0">
+            <Label Content="{x:Static p:Resources.MW_START_DATE_LABEL}" VerticalAlignment="Center"/>
+            <DatePicker x:Name="StartDatePicker" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <Label Content="{x:Static p:Resources.MW_END_DATE_LABEL}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <DatePicker x:Name="EndDatePicker" VerticalAlignment="Center" Margin="5,0,0,0"/>
+            <Button x:Name="UpdateCostAmountChartButton" Content="Update Chart" VerticalAlignment="Center" Padding="3" Click="UpdateCostAmountChartButton_Click" Margin="5,0,0,0"/>
+        </StackPanel>
         <dvc:Chart x:Name="CostAmountDvcChart" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Title="{x:Static p:Resources.CHART_COST_AMT_TITLE}" Margin="0,5,0,5">
             <dvc:Chart.Series>
-                <dvc:LineSeries x:Name="CostAmountDvcChartAcutalSeries" Title="{x:Static p:Resources.CHART_COST_AMT_ACT_LEGEND}" IndependentValueBinding="{Binding PostingDate}" DependentValueBinding="{Binding CostAmountActual}"/>
+                <dvc:LineSeries x:Name="CostAmountActualDvcChartSeries" Title="{x:Static p:Resources.CHART_COST_AMT_ACT_LEGEND}" IndependentValueBinding="{Binding PostingDateAsShortString}" DependentValueBinding="{Binding CostAmountActual}"/>
+                <dvc:LineSeries x:Name="CostAmountExpectedDvcChartSeries" Title="{x:Static p:Resources.CHART_COST_AMT_EXP_LEGEND}" IndependentValueBinding="{Binding PostingDateAsShortString}" DependentValueBinding="{Binding CostAmountExpected}"/>
+                <dvc:LineSeries x:Name="CostAmountTotalDvcChartSeries" Title="{x:Static p:Resources.CHART_COST_AMT_TOT_LEGEND}" IndependentValueBinding="{Binding PostingDateAsShortString}" DependentValueBinding="{Binding CostAmountTotal}"/>
             </dvc:Chart.Series>
         </dvc:Chart>
     </Grid>
